--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "email": "tatjana@wansiedler.com"
     },
     "dependencies": {
-        "axios": "^1.7.7"
+        "axios": "^1.7.7",
+        "chalk": "^5.3.0",
+        "dedent-js": "^1.0.1"
     }
 }
