--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "weather-forecast-cli-app",
-    "version": "1.2.0",
+    "version": "1.4.0",
     "private": false,
     "description": "CLI for getting weather",
     "main": "weather.js",
@@ -9,8 +9,7 @@
     },
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node weather.js"
     },
     "keywords": [
         "cli",
